--- a/src/components/Modal.css
+++ b/src/components/Modal.css
@@ -2,8 +2,28 @@
 	opacity: .8;
 }*/
 .modal-content{
-	background-image:url('../img/restro/offer.png');
-	background-size: cover;
+	background-image:url('../img/restro/offer.jpeg');
 	background-position: center;
+	background-size: 100% 100%;
+	background-repeat: no-repeat;
 	height: 70vh;
+}
+.modal-header {
+    border-bottom: 0 none;
+}
+.order-btn{
+	position: relative;
+	top: 81%;
+}
+.btn-close-yellow {
+  background: transparent url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23fc0'%3e%3cpath d='M.293.293a1 1 0 011.414 0L8 6.586 14.293.293a1 1 0 111.414 1.414L9.414 8l6.293 6.293a1 1 0 01-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 01-1.414-1.414L6.586 8 .293 1.707a1 1 0 010-1.414z'/%3e%3c/svg%3e") center/1em auto no-repeat;
+}
+
+.btn-maroon{
+	color: white;
+	background-color: #9c1b27;
+}
+.btn-maroon:hover{
+	color: white;
+	background-color: #d12132;
 }
